# lambda-sphere-service

./: .editorconfig  .gitignore  .tool-versions  app.js  build.sh  deploy-lambda.sh  dockerfile  package-lock.json  package.json  readme.md  upload.sh
neon-sphere-points/: .gitignore  .tool-versions  Cargo.toml  README.md  package-lock.json  package.json
neon-sphere-points/src/: lib.rs  sbn.rs
node-python-voronoi/: .gitignore  package-lock.json  package.json  readme.md  requirements.txt  tsconfig.json
node-python-voronoi/@types/: pythonia.d.ts
node-python-voronoi/src/: index.ts  sv.py  sv.ts
