[package]
name = "neon-sphere-points"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.11.3"
rand_distr = "0.4.0"
rayon = "1.5.0"
rand = "0.8.5"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
